# FFmpegDemo

app/: build.gradle
app/src/androidTest/java/cn/onestravel/ndk/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cn_onestravel_ndk_ffmpeg_VideoUtils.h  cn_onestravel_ndk_ffmpeg_render_VideoPlayer.h  cn_onestravel_ndk_ffmpegdecodedemo_VideoUtils.h  ffmpeg_player.c  ffmpeg_player_01.c  ffmpeg_video.c  frame_rotate.c  frame_rotate.h  quene.c  quene.h
app/src/main/java/cn/onestravel/ndk/ffmpeg/: MainActivity.java  VideoUtils.java
app/src/main/java/cn/onestravel/ndk/ffmpeg/render/: PlayActivity.java  VideoPlayer.java  VideoView.java
app/src/main/res/layout/: activity_main.xml  activity_play.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/onestravel/ndk/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
